# libfreefare

./: .gitignore  CMakeLists.txt
cmake/: config.h.in
examples/: CMakeLists.txt  felica-read-ndef.c
libfreefare/: CMakeLists.txt  freefare_internal.h  mifare_classic.c  mifare_desfire.c  mifare_desfire_aid.c  mifare_desfire_crypto.c  tlv.c
